changed logo, added messagebox, fixed msgbox flickering, updated table definition with defaults for from / to

--- a/css/app.css
+++ b/css/app.css
@@ -54,9 +54,10 @@ md-tabs.md-no-animation md-tab-content {
   color: #fff;
   background-color: #ed943b;
   border-color: #000000;
-  height:25px;
+  height:22px;
   margin-top:-10px;
-  /*display: none;*/
+  /*text-align: center;*/
+  visibility: hidden;
 }
 
 .menubar .btn-primary {
